[gd_scene load_steps=22 format=3 uid="uid://cr0c14kq4sye1"]

[ext_resource type="Script" uid="uid://cuh3v6jw2ti70" path="res://scenes/game/huds/default_hud.gd" id="1_hv0yb"]
[ext_resource type="PackedScene" uid="uid://3diy2p3nknpi" path="res://scenes/game/note_fields/4_lanes.tscn" id="2_0rw2j"]
[ext_resource type="PackedScene" uid="uid://bx6f5ldidoswy" path="res://scenes/game/notes/note_splash.tscn" id="3_1ubyb"]
[ext_resource type="Script" uid="uid://nb701n0rtr0l" path="res://scenes/game/health_bar.gd" id="4_spp67"]
[ext_resource type="FontFile" uid="uid://dipxuxqymub2c" path="res://assets/fonts/vcr-jp.ttf" id="5_gpwne"]
[ext_resource type="Texture2D" uid="uid://cn6fmp8et8ktw" path="res://assets/game/skins/default/ratings/marvelous.png" id="6_mktee"]
[ext_resource type="Texture2D" uid="uid://ds3g63uwcq4jw" path="res://assets/game/skins/default/combo.png" id="7_7svf3"]
[ext_resource type="FontFile" uid="uid://b5sq5n4iqxrih" path="res://assets/fonts/funkin.ttf" id="8_in2av"]
[ext_resource type="Script" uid="uid://ebr3nrqirlyd" path="res://scripts/game/ratings_calculator.gd" id="9_xshlu"]
[ext_resource type="Script" uid="uid://dp70bbdhoqpo0" path="res://scripts/game/rating.gd" id="10_vo01y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vjxi"]
bg_color = Color(0.529412, 0.545098, 0.545098, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sakno"]
bg_color = Color(0.905882, 0.92549, 0.933333, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wblnk"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_ku58i"]
font = ExtResource("5_gpwne")
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6egcm"]
font = ExtResource("8_in2av")
font_size = 64
outline_size = 18
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_odcbh"]
font = ExtResource("5_gpwne")
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Resource" id="Resource_ybh81"]
script = ExtResource("10_vo01y")
name = &"shit"
timing = 166.66
score = 50
health = 0.0

[sub_resource type="Resource" id="Resource_2xl48"]
script = ExtResource("10_vo01y")
name = &"bad"
timing = 135.0
score = 100
health = 0.25

[sub_resource type="Resource" id="Resource_u7x50"]
script = ExtResource("10_vo01y")
name = &"good"
timing = 90.0
score = 200
health = 0.75

[sub_resource type="Resource" id="Resource_jbop4"]
script = ExtResource("10_vo01y")
name = &"sick"
timing = 45.0
score = 350
health = 1.0

[sub_resource type="Resource" id="Resource_aj00i"]
script = ExtResource("10_vo01y")
name = &"marvelous"
timing = 22.5
score = 350
health = 1.15

[node name="hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(640, 360)
mouse_filter = 2
script = ExtResource("1_hv0yb")
metadata/_edit_lock_ = true

[node name="note_fields" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="opponent" parent="note_fields" instance=ExtResource("2_0rw2j")]
position = Vector2(320, 100)
default_note_splash = ExtResource("3_1ubyb")

[node name="player" parent="note_fields" instance=ExtResource("2_0rw2j")]
position = Vector2(960, 100)
takes_input = true
side = 1
default_note_splash = ExtResource("3_1ubyb")

[node name="health_bar" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(640, 640)
script = ExtResource("4_spp67")

[node name="bar" type="ProgressBar" parent="health_bar"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -8.0
offset_right = 320.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_7vjxi")
theme_override_styles/fill = SubResource("StyleBoxFlat_sakno")
value = 50.0
fill_mode = 1
show_percentage = false

[node name="outline" type="Panel" parent="health_bar/bar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wblnk")

[node name="icons" type="Node2D" parent="health_bar"]

[node name="score_label" type="Label" parent="health_bar"]
anchors_preset = 10
anchor_right = 1.0
offset_left = -640.0
offset_top = 32.0
offset_right = 640.0
offset_bottom = 67.0
grow_horizontal = 2
pivot_offset = Vector2(640, 17.5)
text = "Score:0 • Misses:0 • Accuracy:N/A (N/A)
"
label_settings = SubResource("LabelSettings_ku58i")
horizontal_alignment = 1
vertical_alignment = 1

[node name="rating_container" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(640, 328)

[node name="rating" type="Sprite2D" parent="rating_container"]
scale = Vector2(0.7, 0.7)
texture = ExtResource("6_mktee")

[node name="combo" type="Node2D" parent="rating_container"]
position = Vector2(0, 75)
scale = Vector2(0.5, 0.5)

[node name="1" type="Sprite2D" parent="rating_container/combo"]
texture = ExtResource("7_7svf3")
hframes = 10

[node name="difference_label" type="Label" parent="rating_container"]
offset_left = -640.0
offset_top = 106.0
offset_right = 640.0
offset_bottom = 143.0
pivot_offset = Vector2(640, 24.5)
text = "0ms"
label_settings = SubResource("LabelSettings_6egcm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="countdown_container" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(640, 360)

[node name="song_label" type="Label" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.74902)
layout_mode = 1
offset_top = 16.0
offset_right = 1280.0
offset_bottom = 32.0
pivot_offset = Vector2(640, 8)
text = "Test • [NORMAL]"
label_settings = SubResource("LabelSettings_odcbh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ratings_calculator" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("9_xshlu")
ratings = Array[ExtResource("10_vo01y")]([SubResource("Resource_ybh81"), SubResource("Resource_2xl48"), SubResource("Resource_u7x50"), SubResource("Resource_jbop4"), SubResource("Resource_aj00i")])

[node name="preloading_layer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = -64

[node name="sub_viewport_container" type="SubViewportContainer" parent="preloading_layer"]
unique_name_in_owner = true
offset_left = -512.0
offset_top = -512.0

[node name="preloading_viewport" type="SubViewport" parent="preloading_layer/sub_viewport_container"]
unique_name_in_owner = true
handle_input_locally = false
gui_disable_input = true
render_target_update_mode = 4
